# HousePricePrediction

./: app.py  price.py  pyproject.toml  requirements.txt
data/: combined_df.csv
model/: avg_price_lookup.pkl  dnn_model.keras  feature_names.pkl  lgb_model.pkl  meta_ensemble.pkl  ohe_encoder.pkl  rf_model.pkl  scaler.pkl  stack_model.pkl  tfidf.pkl
