[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "housepricepredictor"
version = "0.1.0"

# Restrict Python version to avoid using 4.x
requires-python = ">=3.10,<4.0"

dependencies = [
    "numpy==2.1.0",
    "pandas==2.3.0",
    "Flask==2.3.3",         # downgraded from 3.1.1
    "flask-cors==6.0.1",
    "scikit-learn==1.3.2",
    "tensorflow==2.19.0",
    "lightgbm==4.6.0",
    "joblib==1.5.1"
]

[tool.setuptools]
packages = []

[tool.setuptools.package-data]
"" = ["data/*", "model/*"]
