[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "housepricepredictor"
version = "0.1.0"

# Restrict Python version to avoid using 4.x
requires-python = ">=3.10,<4.0"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.24.3"
pandas = "^2.3.0"
scikit-learn = "^1.2.2"
tensorflow = "2.13.0"
lightgbm = "^4.1.0"
flask = "^2.3.3"
flask-cors = "^6.0.1"

[tool.setuptools]
packages = []

[tool.setuptools.package-data]
"" = ["data/*", "model/*"]
